# mcbo

./: .gitignore  .readthedocs.yaml  CLAUDE.md  LICENSE  MANUSCRIPT_FIXES.md  Makefile  README.md  README_SETUP.md  environment.yml  requirements.txt  reviews.md  run_eval.py
.github/ISSUE_TEMPLATE/: mcbo-term-request.md
.github/workflows/: docs.yml  qc.yml
alchemist/: .gitignore  DEMO_SCRIPT.md  README.md  _demo_card_backups.md  alchemist_engine.py  app.py  conversations.py  data_loader.py  file_tools.py  mcbo_engine.py  requirements.txt
alchemist/message_catalogs/en/: alchemist_system_prompt.md
alchemist/templates/: index.html
data.sample/: README.md  STATS.txt  bootstrap_graph.ttl  gene_annotations.csv  graph.ttl  mcbo-instances.ttl  sample_metadata.csv
data.sample/agent_results/: SUMMARY.json  cq1.json  cq2.json  cq3.json  cq4.json  cq5.json  cq7.json  query.json
data.sample/expression/: study_demo_001.csv  study_demo_002.csv  study_demo_003.csv
data.sample/processed/: mcbo_instances.ttl
data.sample/results/: SUMMARY.txt  cq1.tsv  cq2.tsv  cq3.tsv  cq4.tsv  cq5.tsv  cq6.tsv  cq7.tsv  cq8.tsv
data.sample/studies/study_demo_001/: sample_metadata.csv
data.sample/studies/study_demo_002/: expression_matrix.csv  sample_metadata.csv
data.sample/studies/study_demo_003/: expression_matrix.csv  sample_metadata.csv
docs/: AGENT.md  CQ_DATA_REQUIREMENTS.md  Makefile  README.md  WORKFLOWS.md  agent.md  api.rst  cli.md  conf.py  development.md  development.rst  index.md  index.rst  installation.md  installation.rst  manuscript.docx  ontology.md  quickstart.md  quickstart.rst  requirements.txt  term-request.md  workflows.md
docs/source/: cli.rst  development.rst  ontology.rst  workflows.rst
eval/: README.md  graph.sample.ttl  graph.ttl
eval/queries/: cq1.rq  cq2.rq  cq3.rq  cq4.rq  cq5.rq  cq6.rq  cq7.rq  cq8.rq
eval/results/: SUMMARY.txt  cq1.tsv  cq2.tsv  cq5.tsv
ontology/: mcbo.owl.ttl  tmp.txt
python/: README.md  build_graph.py  csv_to_rdf.py  pyproject.toml  run_eval.py  stats_eval_graph.py
python/mcbo/: __init__.py  build_graph.py  csv_to_rdf.py  duckdb_io.py  graph_utils.py  namespaces.py  run_eval.py  stats_eval_graph.py  validate_go_annotations.py  validate_instances.py
python/mcbo/agent/: __init__.py  agent_eval.py  mcp_server.py  orchestrator.py  pathway_tools.py  sparql_templates.py  sql_templates.py  stats_tools.py  tools.py
python/tests/: __init__.py  test_agent_integration.py  test_ontology.py  test_stats_tools.py
reports/: performance_table.md
scripts/: build_graph.py  download_imports.sh  gen_performance_table.py  plot_cq6.py  reformat_expression.py  run_all_checks.sh  stats_eval_graph.py
sparql/: README.md  duplicate_labels.rq  missing_definitions.rq  orphan_classes.rq
src/: README.md  competency_questions.py  csv_to_rdf.py
supplement/: S1-stats.txt  S2-qc.txt  S4-real-data-results.txt  S5-synthetic-data-results.txt  S7-performance-table.docx  S7-performance-table.md  S8-mcbo.owl.ttl.txt
